--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Nutrizone.NoActionBar">
+        <activity android:name=".Review"></activity>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-        <activity android:name=".Extract"></activity>
+        <activity android:name=".Extract" />
         <activity android:name=".Login" />
         <activity android:name=".PreviousItems" />
         <activity android:name=".AddFoodButtons" />
